--- a/index.html
+++ b/index.html
@@ -25,5 +25,7 @@
 
     <button id="generate">Generate Password</button>
     <h2 id="password"></h2>
+
+    <script src="script.js"></script>
   </body>
 </html>
