--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script defer src="script.js"></script>
     <title>Password - Generator</title>
   </head>
   <body>
@@ -22,10 +23,9 @@
 
     <input type="checkbox" id="symbols" checked />
     <label for="symbols">Include Symbols</label>
+    <br />
 
     <button id="generate">Generate Password</button>
     <h2 id="password"></h2>
-
-    <script src="script.js"></script>
   </body>
 </html>
