--- a/src/index.html
+++ b/src/index.html
@@ -7,28 +7,41 @@
     <script defer src="script.js"></script>
     <title>Password - Generator</title>
   </head>
-  <body>
-    <main class="">
-      <h1>Password Generator</h1>
-      <label for="length">Password length:</label>
-      <input type="number" id="length" min="4" max="50" value="12" />
-      <br />
+  <body class="bg-slate-500 text-white">
+    <main class="container mx-auto bg-blue-900 p-10 mt-10 rounded">
+      <section>
+        <h1 class="font-mono flex items-center justify-center font-bold mt-5">
+          Password Generator
+        </h1>
+        <div class="flex flex-col items-center justify-center">
+          <label class="-tracking-tighter" for="length">Password length:</label>
+          <input
+            class="mt-2 rounded font-bold p-2 w-36 text-black text-center"
+            type="number"
+            id="length"
+            min="4"
+            max="50"
+            value="12"
+          />
+        </div>
+        <br />
 
-      <input type="checkbox" id="uppercase" checked />
-      <label for="uppercase">Include Uppercase</label>
+        <input type="checkbox" id="uppercase" checked />
+        <label for="uppercase">Include Uppercase</label>
 
-      <input type="checkbox" id="lowercase" checked />
-      <label for="lowercase">Include Lowercase</label>
+        <input type="checkbox" id="lowercase" checked />
+        <label for="lowercase">Include Lowercase</label>
 
-      <input type="checkbox" id="numbers" checked />
-      <label for="numbers">Include Numbers</label>
+        <input type="checkbox" id="numbers" checked />
+        <label for="numbers">Include Numbers</label>
 
-      <input type="checkbox" id="symbols" checked />
-      <label for="symbols">Include Symbols</label>
-      <br />
+        <input type="checkbox" id="symbols" checked />
+        <label for="symbols">Include Symbols</label>
+        <br />
 
-      <button id="generate">Generate Password</button>
-      <h2 id="password"></h2>
+        <button id="generate">Generate Password</button>
+        <h2 id="password"></h2>
+      </section>
     </main>
   </body>
 </html>
