Refactoring JS code

--- a/src/index.html
+++ b/src/index.html
@@ -60,10 +60,9 @@
           >
             Generate Password
           </button>
-          <h2
-            class="bg-white w-52 mt-3 p-2 text-center text-black rounded"
-            id="password"
-          ></h2>
+          <div class="bg-white w-52 mt-3 p-2 text-center text-black rounded">
+            <h2 id="password"></h2>
+          </div>
         </div>
       </section>
     </main>
