--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../public/output.css" />
-    <script defer src="script.js"></script>
+    <script defer src="./src/script.js"></script>
     <title>Password - Generator</title>
   </head>
   <body class="bg-slate-500 text-white">
